--- a/src/Language/lang.properties
+++ b/src/Language/lang.properties
@@ -6,11 +6,10 @@ quit_button=Quit
 loged_in_title=Success!
 logged_in_header=Successfully logged in.
 loged_in_content=Welcome back!
-login_error_noname=-Please Enter User Name. 
-login_error_nopassword=-Please enter password \n\n
-login_error_fail= Incorrect User name or password \n
+login_error_noname=-Please Enter User Name \n
+login_error_nopassword=-Please enter password.\n
+login_error_fail= Incorrect User name or password \n 
 appointment_title=Appointments
 logged_in_user=Logged in user:
 login_warning=Warning
-missing_fields=1Required Fields Empty: \n
-
+missing_fields=2Required Fields Empty: \n
