Final changes complete

--- a/src/Language/lang.properties
+++ b/src/Language/lang.properties
@@ -12,4 +12,4 @@ login_error_fail= Incorrect User name or password \n
 appointment_title=Appointments
 logged_in_user=Logged in user:
 login_warning=Warning
-missing_fields=2Required Fields Empty: \n
+missing_fields=Required Field(s) Empty: \n
