--- a/src/Language/lang_en.properties
+++ b/src/Language/lang_en.properties
@@ -12,5 +12,5 @@ login_error_fail= Incorrect User name or password \n
 appointment_title=Appointments
 logged_in_user=Logged in user:
 login_warning=Warning
-missing_fields=1Required Fields Empty: \n
+missing_fields=Required Field(s) Empty: \n
 
